--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="/assets/relicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700;800&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet" />
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Baloo+2:wght@700;800&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet" />
     <title>SkySync</title>
   </head>
   <body>
